--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   go_router: ^14.2.2
+  google_generative_ai: ^0.4.4
 
 dev_dependencies:
   flutter_test:
