--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,15 @@ dependencies:
   provider: ^6.1.2
   go_router: ^14.2.2
   google_generative_ai: ^0.4.4
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
